fix: adjust alignments for all shapes

--- a/sass/components/_backgrounds.scss
+++ b/sass/components/_backgrounds.scss
@@ -14,7 +14,7 @@
 
     .sm-rec {
         @include lil-rec;
-        transform: translate(850px, 300px) rotate(43deg);
+        transform: translate(850px, 150px) rotate(43deg);
     }
     .background-cover {
         @include section-background;
@@ -67,7 +67,7 @@
         }
         .sm-rec {
             @include lil-rec;
-            transform: translate(-550px, -775px) rotate(43deg);
+            transform: translate(-650px, -775px) rotate(43deg);
             height: 1000px;
             width: 1100px;
         }
