--- a/style.css
+++ b/style.css
@@ -1621,8 +1621,8 @@ div.customer-story-box {
   background-color: #b6c4f5;
   opacity: 0.51;
   border-radius: 78px;
-  -webkit-transform: translate(850px, 300px) rotate(43deg);
-          transform: translate(850px, 300px) rotate(43deg); }
+  -webkit-transform: translate(850px, 150px) rotate(43deg);
+          transform: translate(850px, 150px) rotate(43deg); }
 
 .bottom-right-shapes .background-cover {
   height: 530px;
@@ -1699,8 +1699,8 @@ div.customer-story-box {
     background-color: #b6c4f5;
     opacity: 0.51;
     border-radius: 78px;
-    -webkit-transform: translate(-550px, -775px) rotate(43deg);
-            transform: translate(-550px, -775px) rotate(43deg);
+    -webkit-transform: translate(-650px, -775px) rotate(43deg);
+            transform: translate(-650px, -775px) rotate(43deg);
     height: 1000px;
     width: 1100px; }
   .error-left-shapes .all-shapes-wrapper .background-cover {
